<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewProductActivity"
    android:id="@+id/parent_layout">
    <RelativeLayout
        android:id="@+id/product_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rectangle_background">
        <RelativeLayout
            android:id="@+id/image_container"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:padding="12dp"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/add_photo" />

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/image_container"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp">

            <EditText
                android:id="@+id/title_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/product_title"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"
                android:layout_gravity="center"
                android:textAlignment="center"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/price_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_price"
                    android:layout_marginTop="10dp"
                    android:inputType="number"
                    android:digits="0123456789."
                    android:layout_centerVertical="true"
                    android:gravity="top|start"
                    android:imeOptions="actionDone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rub"
                    android:layout_toRightOf="@id/price_et"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="2dp"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/save_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_below="@id/product_container"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        />
    <Button
        android:id="@+id/delete_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_below="@id/save_btn"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:text="@string/delete"
        />


</RelativeLayout>